--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>HOF - Zalo Sharing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="https://hof-test.chaintech.vn/api/images/ee1eb961-dad8-4412-be04-8b19a2f6742d%2Fcardgame-3f377f02-4268-4f53-a534-e4a3f1768a29.jpg" />
 
   </head>
   <body>
